# threads-scrapper

./: .env  .gitignore  CLAUDE.md  README.md  SUMMARY.md  discovered_users.json  fetch_posts.py  fetch_users.py  main.py  preprocess.py  pyproject.toml  thread scrapper.ipynb  threads_cleaned.html  threads_cookies.pkl  threads_page_source.html
docs/: 00-dataset-analysis.md  01-basic-analysis.md  02-word-analysis.md  03-article-classification.md  04-creator-classification.md  README.md  SUMMARY.md  book.json
docs/articles/: 00-dataset-analysis.md  01-basic-analysis.md  02-word-analysis.md  03-article-classification.md  04-creator-classification.md  proposal.md
scripts/: analyze_data.py  basic_analysis.py  clean_json_data.py  dataset_analysis.py  generate_tier_stats.py  utils.py  word_analysis.py
scripts/article/: analysis.py
scripts/basic/: analysis.py
scripts/creator/: analysis.py
scripts/dataset/: analysis.py
scripts/outputs/cache/: article-classifications.json  creator-classifications.json
scripts/outputs/tables/: article-classification-engagement.csv  article-classification-summary.csv  article-classification.csv  creator-classification-engagement.csv  creator-classification-summary.csv  creator-classification-top.csv  creator-classification.csv  dataset_stats_summary.csv  word-analysis-0-100.csv  word-analysis-100-1k.csv  (+4 more)
scripts/shared/: utils.py
scripts/tables/: word-analysis-0-100.csv  word-analysis-100-1k.csv  word-analysis-100k-1m.csv  word-analysis-10k-100k.csv  word-analysis-1k-10k.csv  word-analysis-All.csv
scripts/word/: analysis.py
(+5 files in other folders)
