[project]
name = "scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "selenium>=4.38.0",
    "tabulate>=0.9.0",
    "wordcloud>=1.9.5",
]
